Assignment Ready to be Reviewed

--- a/force-app/main/default/classes/FlowControlLoopsCollections.cls
+++ b/force-app/main/default/classes/FlowControlLoopsCollections.cls
@@ -14,7 +14,7 @@
 * in flow control, loops, and collections. By mastering these concepts, developers will be able to write more
 * efficient and effective code in their Salesforce projects.
 *
-* @author Your Name
+* @author Zohaib Karim Noorani
 */
 
 public with sharing class FlowControlLoopsCollections {
